# python_solva

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  app.py  babel.config.cjs  eslint.config.js  mkdocs.yml  package.json  pyproject.toml  requirements.txt  setup.py  tailwind.config.js
