[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docanalyze"
dynamic = ["version"]
description = "A document analysis tool powered by Google's Gemini AI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Anshul Chahar", email = ""}
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=docanalyze --cov-report=term-missing"

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "env"
]
per-file-ignores = [
    "app.py:E402"
]
ignore = [
    "E501",
    "W503"
]